# nice-adb

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
fastboot/: Makefile  Makefile.in  fastboot
fastboot/.deps/: fastboot-bootimg.Po  fastboot-engine.Po  fastboot-fastboot.Po  fastboot-protocol.Po  fastboot-usb_osx.Po  fastboot-util_osx.Po
libcutils/: Makefile  Makefile.am  Makefile.in
libcutils/.deps/: libcutils_a-array.Po  libcutils_a-buffer.Po  libcutils_a-config_utils.Po  libcutils_a-cpu_info.Po  libcutils_a-hashmap.Po  libcutils_a-iosched_policy.Po  libcutils_a-list.Po  libcutils_a-load_file.Po  libcutils_a-native_handle.Po  libcutils_a-open_memstream.Po  libcutils_a-process_name.Po  libcutils_a-properties.Po  libcutils_a-record_stream.Po  libcutils_a-sched_policy.Po  libcutils_a-socket_inaddr_any_server.Po  libcutils_a-socket_local_client.Po  libcutils_a-socket_local_server.Po  libcutils_a-socket_loopback_client.Po  libcutils_a-socket_loopback_server.Po  libcutils_a-socket_network_client.Po  libcutils_a-sockets.Po  libcutils_a-strdup16to8.Po  libcutils_a-strdup8to16.Po  libcutils_a-threads.Po
libmincrypt/: Makefile  Makefile.am  Makefile.in
libmincrypt/.deps/: libmincrypt_a-rsa.Po  (+2 more)
libzipfile/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  adb  adb_auth_host.c  adb_trace.h  commandline.c  fdevent.cpp  usb_vendors.c
src/.deps/: adb-adb.Po  adb-adb_auth_host.Po  adb-adb_client.Po  adb-commandline.Po  adb-console.Po  adb-file_sync_client.Po  adb-get_my_path_darwin.Po  adb-services.Po  adb-sockets.Po  adb-transport.Po  adb-transport_local.Po  adb-transport_usb.Po  adb-usb_osx.Po  adb-usb_vendors.Po  fdevent.Po
third-part-tools/: auto_install_tools_mac.sh
(+2 files in other folders)
